--- a/app/views/admin/release/index.scala.html
+++ b/app/views/admin/release/index.scala.html
@@ -5,8 +5,10 @@
     <div class="row">
         <div class="col-xs-12">
             <h1 class="page-header">@Messages("admin.release.index.header")</h1>
-            <p><a href="@controllers.admin.routes.AdminReleaseController.releaseRun()" class="btn-primary">@Messages("admin.release.actions.releaserun")</a></p>
-            <p><a href="@controllers.admin.routes.AdminReleaseController.deleteAllFromDB()" class="btn-primary btn-danger">@Messages("admin.release.actions.deleteall")</a></p>
+            <div class="btn-group">
+                <a href="@controllers.admin.routes.AdminReleaseController.releaseRun()" class="btn btn-primary">@Messages("admin.release.actions.releaserun")</a>
+                <a href="@controllers.admin.routes.AdminReleaseController.deleteAllFromDB()" class="btn btn-primary btn-danger">@Messages("admin.release.actions.deleteall")</a>
+            </div>
         </div>
     </div>
 
