--- a/app/views/header/header.scala.html
+++ b/app/views/header/header.scala.html
@@ -82,7 +82,23 @@ o
                 </div>
             </div>
         </div>
-        <div class="food-image-nav"><!-- no content --></div>
+
+        <div class="food-nav hidden-xs">
+            <div id="carousel-header" class="carousel slide carousel-fade" data-ride="carousel" data-interval="4000">
+                <div class="carousel-inner">
+                    <div class="item active"><div class="food-nav-image-base food-nav-image-01"></div></div>
+                    <div class="item"><div class="food-nav-image-base food-nav-image-02"></div></div>
+                    <div class="item"><div class="food-nav-image-base food-nav-image-03"></div></div>
+                    <div class="item"><div class="food-nav-image-base food-nav-image-04"></div></div>
+                    <div class="item"><div class="food-nav-image-base food-nav-image-05"></div></div>
+                    <div class="item"><div class="food-nav-image-base food-nav-image-06"></div></div>
+                    <div class="item"><div class="food-nav-image-base food-nav-image-07"></div></div>
+                    <div class="item"><div class="food-nav-image-base food-nav-image-08"></div></div>
+                    <div class="item"><div class="food-nav-image-base food-nav-image-09"></div></div>
+                    <div class="item"><div class="food-nav-image-base food-nav-image-10"></div></div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="header-spacing"><!-- no content --></div>
 </header>
