--- a/app/views/admin/recipe/index.scala.html
+++ b/app/views/admin/recipe/index.scala.html
@@ -5,8 +5,12 @@
     <div class="row">
         <div class="col-xs-12">
             <h1 class="page-header">@Messages("admin.recipe.index.header")</h1>
-            <p><a href="@controllers.admin.routes.AdminRecipeController.add()" class="btn-primary">@Messages("admin.actions.add")</a></p>
-            <p><a href="@controllers.admin.routes.AdminRecipeController.listAll()" class="btn-primary">@Messages("admin.actions.list")</a></p>
+            <div class="btn-group">
+                <a href="@controllers.admin.routes.AdminRecipeController.add()" class="btn btn-primary">@Messages("admin.actions.add")</a>
+                <a href="@controllers.admin.routes.AdminRecipeController.listAll()" class="btn btn-primary">@Messages("admin.actions.list")</a>
+                <a href="@controllers.admin.routes.AdminRecipeController.deleteAll()" class="btn btn-danger">@Messages("admin.actions.delete-all")</a>
+                <!--<a href="@controllers.admin.routes.AdminRecipeController.deleteAll()" class="btn btn-danger" data-toggle="modal" data-target="#confirmDelete" data-title="Delete All" data-message="Are you sure you want to delete everything?">@Messages("admin.actions.delete-all")</a>-->
+            </div>
         </div>
     </div>
 
