--- a/app/views/admin/recipe/list.scala.html
+++ b/app/views/admin/recipe/list.scala.html
@@ -5,12 +5,14 @@
     <div class="row">
         <div class="col-xs-12">
         <h1 class="page-header">@Messages("admin.recipe.list.header")</h1>
-        <p><a href="@controllers.admin.routes.AdminRecipeController.add()" class="btn-primary">@Messages("admin.actions.add")</a></p>
+        <p><a href="@controllers.admin.routes.AdminRecipeController.add()" class="btn btn-primary">@Messages("admin.actions.add")</a></p>
 
         <table class="table table-striped table-hover table-bordered">
             <thead>
                 <tr>
+                    <th>@Messages("admin.recipe.list.owner")</th>
                     <th>@Messages("admin.recipe.list.name")</th>
+                    <th>@Messages("admin.recipe.list.route")</th>
                     <th>@Messages("admin.recipe.list.action")</th>
                 </tr>
             </thead>
@@ -18,7 +20,9 @@
             <tbody>
             @for(recipe <- recipeList) {
                 <tr>
-                    <td>@recipe.name</td>
+                    <td>@recipe.getOwnerProfile.getOwner.fullName</td>
+                    <td>@recipe.getName</td>
+                    <td><small>@recipe.getLink</small></td>
                     <td>
                         <ul class="nav nav-pills">
                             <li><a href="@controllers.admin.routes.AdminRecipeController.edit(recipe.objectId)"><span class="glyphicon glyphicon-edit"></span>&nbsp;@Messages("admin.actions.edit")</a></li>
