--- a/app/views/admin/roles/list.scala.html
+++ b/app/views/admin/roles/list.scala.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-xs-12">
         <h1 class="page-header">@Messages("admin.roles.list.header")</h1>
-        <p><a href="@controllers.admin.routes.AdminUserRoleController.add()" class="btn-primary">@Messages("admin.actions.add")</a></p>
+        <p><a href="@controllers.admin.routes.AdminUserRoleController.add()" class="btn btn-primary">@Messages("admin.actions.add")</a></p>
 
         <table class="table table-striped table-hover table-bordered">
             <thead>
