--- a/app/views/admin/usercredential/index.scala.html
+++ b/app/views/admin/usercredential/index.scala.html
@@ -5,7 +5,9 @@
     <div class="row">
         <div class="col-xs-12">
             <h1 class="page-header">@Messages("admin.usercredential.index.header")</h1>
-            <p><a href="@controllers.admin.routes.AdminUserCredentialController.listAll()" class="btn-primary">@Messages("admin.actions.list")</a></p>
+            <div class="btn-group">
+                <a href="@controllers.admin.routes.AdminUserCredentialController.listAll()" class="btn btn-primary">@Messages("admin.actions.list")</a>
+            </div>
         </div>
     </div>
 
