--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -27,6 +27,7 @@
         @*<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>*@
         <script src="@routes.Assets.at("js/jquery.gray.min.js")"></script>
         <script src="@routes.Assets.at("js/star-rating.min.js")"></script>
+        <script src="@routes.Assets.at("js/bootbox.min.js")"></script>
         <script src="@routes.Assets.at("js/site.js")"></script>
     </body>
 </html>
