--- a/app/views/mainedit.scala.html
+++ b/app/views/mainedit.scala.html
@@ -41,6 +41,9 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="@routes.Assets.at("bootstrap/js/bootstrap.min.js")"></script>
         <script src="@routes.Assets.at("tinymce/tinymce.min.js")"></script>
+        <script src="@routes.Assets.at("js/bootbox.min.js")"></script>
         <script src="@routes.Assets.at("js/site.js")"></script>
+
+        @shared.modalConfirm()
     </body>
 </html>
