--- a/app/views/shared/hdcShare.scala.html
+++ b/app/views/shared/hdcShare.scala.html
@@ -1,3 +1,4 @@
 @(url: String)
-<button type="button" class="btn btn-default btn-primary btn-xs hdc-like" href="@url">@Messages("like.text")</button>
-<span class="hdc-like-icon"></span>
+<div class="btn-group btn-group-likes">
+    <button type="button" class="btn btn-default btn-hdc-like" href="@url"><span class="hdc-like-icon"></span> @Messages("like.text")</button>
+</div>
